Implement senior and disabled participant fee discounts
- Add calculateAdjustedPrice function to automatically deduct fees for seniors and disabled participants
- Update checkout display to show original price crossed out and discount badges
- Add adjusted_price field to participant data sent to backend
- Update backend to use adjusted prices from frontend with fallback calculation
- Support for free entry based on event settings (free_for_seniors, free_for_disability)
- Age-based senior discounts using senior_age_threshold setting

--- a/startingline-backend/package.json
+++ b/startingline-backend/package.json
@@ -6,6 +6,8 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "migrate": "node scripts/migrate.js",
+    "migrate:staging": "NODE_ENV=staging node scripts/migrate.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +19,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/multer": "^2.0.0",
     "@types/pg": "^8.15.5",
+    "@types/puppeteer": "^5.4.7",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -30,6 +33,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
+    "puppeteer": "^24.21.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
