feat: Comprehensive form styling, mobile validation, ID management, and license system
🎨 Form Styling & UX Improvements:
- Add beautiful mobile input component with SA mobile number validation
- Implement consistent form styling with icons, spacing, and red asterisks
- Add enhanced input styling for Medical Aid, Emergency Contact fields
- Improve read-only field styling for ID numbers and DOB
- Fix favicon handling with dynamic icon generation

🆔 ID Number Management:
- Add South African ID number validation with checksum verification
- Implement ID number input component with auto-DOB population
- Add ID number encryption at rest and masked display
- Support both SA ID and Passport number capture
- Auto-populate DOB from SA ID numbers with format validation

📱 Mobile Number Validation:
- Implement comprehensive SA mobile number validation
- Add real-time formatting and validation feedback
- Support all SA mobile prefixes (60-69, 71-79, 81-84)
- Apply mobile validation across all forms (registration, profiles, etc.)

🏃 License Management System:
- Add comprehensive license management per member
- Support multiple sport types (road_running, trail_running, etc.)
- Auto-populate licenses based on event type during registration
- Add temporary license purchase option with fee calculation
- Include license data in CSV exports with proper formatting

📊 CSV Export Enhancements:
- Add license information columns (Temp License Y/N, permanent numbers)
- Include distance in kilometers for all events
- Add merchandise variation details in exports
- Fix SQL GROUP BY issues for distance_km field

🔧 Technical Improvements:
- Fix ParticipantFormData interface to resolve TypeScript errors
- Add encryption service for sensitive data (ID numbers)
- Implement proper error handling and validation
- Add rich text editor for event descriptions
- Update database schema with license fields

🐛 Bug Fixes:
- Resolve infinite re-render issues in mobile input validation
- Fix favicon 500 errors 

--- a/startingline-backend/package.json
+++ b/startingline-backend/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
     "@types/bcrypt": "^6.0.0",
+    "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^21.1.7",
     "@types/multer": "^2.0.0",
     "@types/pg": "^8.15.5",
     "@types/puppeteer": "^5.4.7",
@@ -24,17 +26,21 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dompurify": "^3.2.7",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
+    "jsdom": "^27.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "puppeteer": "^24.21.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "south-african-id-validator": "^1.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
