--- a/startingline-organiser/package.json
+++ b/startingline-organiser/package.json
@@ -23,9 +23,16 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.2",
     "@tanstack/react-query": "^5.87.1",
+    "@tiptap/extension-image": "^3.5.3",
+    "@tiptap/extension-link": "^3.5.3",
+    "@tiptap/extension-placeholder": "^3.5.3",
+    "@tiptap/pm": "^3.5.3",
+    "@tiptap/react": "^3.5.3",
+    "@tiptap/starter-kit": "^3.5.3",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
@@ -38,6 +45,7 @@
     "react-hook-form": "^7.62.0",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
+    "south-african-id-validator": "^1.0.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
